# unit-scaling

./: .devcontainer.dockerfile  .devcontainer.json  .dockerignore  .gitignore  .readthedocs.yaml  Dockerfile  LICENSE  NOTICE.md  README.md  api_reference.html  blog.html  dev  development.html  genindex.html  index.html  limitations.html  lumache.py  objects.inv  py-modindex.html  pyproject.toml  requirements-dev-ipu.txt  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  train_nanogpt_ipu.py  user_guide.html
.github/workflows/: ci-ipu.yaml  ci.yaml  publish.yaml
_modules/: collections.html  index.html  typing.html
_modules/torch/: _tensor.html
_modules/torch/optim/: adam.html  adamw.html  sgd.html
_modules/unit_scaling/: _modules.html  analysis.html  constraints.html  formats.html  functional.html  modules.html  optim.html  parameter.html  scale.html  utils.html
_modules/unit_scaling/core/: functional.html
_modules/unit_scaling/transforms/: _compile.html  _simulate_format.html  _track_scales.html  _unit_scale.html  utils.html
_sources/: api_reference.rst.txt  blog.rst.txt  index.rst.txt  limitations.rst.txt  user_guide.rst.txt
_sources/posts/: almost_scaled_dot_product_attention.md.txt
analysis/: benchmarking_compiled_unit_scaled_ops.ipynb  emb_lr_analysis.ipynb  empirical_op_scaling.ipynb  sgd_scaling.ipynb
analysis/almost_scaled_dot_product_attention/: .gitignore  almost_scaled_dot_product_attention.ipynb  demo_transformer.py
docs/: Makefile  api_reference.rst  blog.rst  conf.py  development.md  index.rst  limitations.rst  make.bat  requirements.txt  user_guide.rst
docs/_static/: animation.html
docs/_templates/: custom-class-template.rst  custom-module-template.rst
docs/posts/: almost_scaled_dot_product_attention.md
examples/: demo.ipynb  how_to_scale_op.ipynb  scale_analysis.py
examples/almost_scaled_dot_product_attention/: demo_transformer.py
posts/: almost_scaled_dot_product_attention.html
unit_scaling/: __init__.py  _internal_utils.py  _modules.py  _parameter.py  _version.py  analysis.py  constraints.py  docs.py  formats.py  functional.py  modules.py  optim.py  parameter.py  scale.py  utils.py
unit_scaling/core/: __init__.py  functional.py
unit_scaling/loupe/: data.csv  index.html  index.js  loupe.ipynb  loupe.py
unit_scaling/loupe/.loupe_data/: 2023-10-21 21:15:22.863904  2023-10-21 21:22:54.371915  (+5 more)
unit_scaling/tests/: conftest.py  helper.py  test_analysis.py  test_constraints.py  test_docs.py  test_formats.py  test_functional.py  test_modules.py  test_optim.py  test_parameter.py  test_scale.py  test_transforms.py  test_utils.py
unit_scaling/transforms/: __init__.py  _compile.py  _simulate_format.py  _track_scales.py  _unit_scale.py  utils.py
(+8 files in other folders)
