[options]
packages =
    unit_scaling

[mypy]
pretty = true
show_error_codes = true
strict = true
check_untyped_defs = true

[mypy-poptorch.*]
ignore_missing_imports = True

[mypy-poptorch_experimental_addons.*]
ignore_missing_imports = True

[mypy-scipy.*]
ignore_missing_imports = True

# As torch.fx doesn't explicitly export many of its useful modules.
[mypy-torch.fx]
implicit_reexport = True

[flake8]
# See https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html
max-line-length = 88
extend-ignore = E203,E731

[isort]
profile = black

[tool:pytest]
addopts = --no-cov-on-fail

[coverage:report]
# fail_under = 100
skip_covered = true
show_missing = true
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    assert False
